# WFCForge

./: .gitignore  .gitmodules  CMakeLists.txt  Helper.py  README.md
WFCForge/Include/: MainApplication.hpp  WFCForge.hpp
WFCForge/Include/Core/: Application.hpp  Assert.hpp  Core.hpp  ImGuiManager.hpp  Logger.hpp  Macros.hpp  SharedPtr.hpp  Utils.hpp  Window.hpp
WFCForge/Include/Data/: AppState.hpp
WFCForge/Include/Editors/: Viewport.hpp
WFCForge/Include/Generators/MazeGen2D/: MazeGen2DAldousBroder.hpp  MazeGen2DAlgorithm.hpp  MazeGen2DBacktracking.hpp  MazeGen2DBinaryTree.hpp  MazeGen2DDummy.hpp  MazeGen2DKruskal.hpp  MazeGen2DManager.hpp  MazeGen2DTile.hpp
WFCForge/Include/Generators/OverlappedModel2D/: OverlappedModel2DManager.hpp
WFCForge/Include/Generators/TiledModel2D/: TiledModel2DManager.hpp  TiledModel2DTile.hpp  TiledModel2DTilemap.hpp  TiledModel2DTileset.hpp
WFCForge/Include/Generators/VoxoMan3D/: VoxoMan3DHair.hpp  VoxoMan3DManager.hpp  VoxoMan3DTypes.hpp
WFCForge/Include/Graphics/: BatchRenderer.hpp  Camera.hpp  Framebuffer.hpp  Mesh.hpp  MeshGen.hpp  SSBO.hpp  Shader.hpp  Texture2D.hpp
WFCForge/Include/UI/: Dockspace.hpp  Style.hpp
WFCForge/Source/: Main.cpp  MainApplication.cpp
WFCForge/Source/Core/: Application.cpp  ImGuiManager.cpp  Logger.cpp  Utils.cpp  Window.cpp
WFCForge/Source/Editors/: Viewport.cpp
WFCForge/Source/Generators/MazeGen2D/: MazeGen2DAldousBroder.cpp  MazeGen2DAlgorithm.cpp  MazeGen2DBacktracking.cpp  MazeGen2DBinaryTree.cpp  MazeGen2DDummy.cpp  MazeGen2DKruskal.cpp  MazeGen2DManager.cpp  MazeGen2DTile.cpp
WFCForge/Source/Generators/OverlappedModel2D/: OverlappedModel2DManager.cpp
WFCForge/Source/Generators/TiledModel2D/: TiledModel2DManager.cpp  TiledModel2DTile.cpp  (+2 more)
WFCForge/Source/Graphics/: BatchRenderer.cpp  Camera.cpp  Framebuffer.cpp  Mesh.cpp  MeshGen.cpp  SSBO.cpp  Shader.cpp  Texture2D.cpp
WFCForge/Source/UI/: Dockspace.cpp  Style.cpp
(+2 files in other folders)
